--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ h3{
 }
 
 a{
-  color: #11999E;
+  color: #66BFBF;
   font-family: 'Montserrat', sans-serif;
   margin: 10px 20px;
   text-decoration: none;
